# AdventOfCode

./: .gitignore  README.md
2019/: day01.go  day02.go  main.go  utils.go
2019/day01/: day01.go
2019/day02/: day02.go
2019/day03/: day03.go  day03_test.go
2019/day04/: day04.go  day04_test.go
2019/day05/: day05.go  day05_test.go
2019/day06/: day06.go  day06_test.go
2019/day07/: day07.go  day07_test.go
2019/utils/: utils.go
2020/aoc/: Cargo.toml
2020/aoc/src/: day01.rs  day02.rs  day03.rs  lib.rs  main.rs  utils.rs
2020/day01/: main.rs
