[package]
name = "aoc"
version = "0.1.0"
authors = ["Harry Poulter <hdp1213@hotmail.com>"]
edition = "2018"
description = "Advent of Code 2020"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10" }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
